# notely

./: .gitignore  LICENSE  README.md  TODO.md  config.yaml  main.py  pyproject.toml  requirements.txt  test_prompt.txt
src/: const.py  database.py  execution.py  fileactions.py  main.py  transcription.py
src/notely/: __main__.py  execution.py
src/tests/: db_test.py  fileactions_test.py
src/tome/: __main__.py  config.py  database.py  fileactions.py  transcription.py
